Fix long code titles layout breaks on mobile
- Fix long code titles layout breaks on mobile
- SCSS sync

--- a/_sass/layout/_responsive.scss
+++ b/_sass/layout/_responsive.scss
@@ -434,6 +434,7 @@
 		.title {
 			order: 3;
 			margin-top: 5px;
+			overflow-wrap: break-word;
 		}
 	}
 }
@@ -460,6 +461,12 @@
 
 	body.landing .install p {
 		margin-bottom: 25px;
+	}
+	
+	body.documentation #main_content_wrap{
+		h1, h2, h3, h4, h5{
+			overflow-wrap: break-word;
+		}
 	}
 }
 
@@ -798,7 +805,7 @@
 
 	body.documentation .bottomline {
 		flex-direction: column-reverse;
-		gap: 24px;
+		gap: 16px;
 	}
 
 	body.documentation{
